--- a/main.css
+++ b/main.css
@@ -3,11 +3,12 @@
 }
 
 main {
-	padding: 70px;
-	display: inline-block;
+	padding-top: 70px;
+	margin-left: 60px;
 }
 
 header {
+	display: block;
 	background-color: #e5e5e5;
 	position: fixed;
 	height: 40px;
@@ -17,8 +18,11 @@ header {
 }
 
 
-a.title {
-	margin-top: 10px;
+.title {
+	padding-top: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
 	}
 
 
@@ -31,10 +35,10 @@ a:link {
 
 .navbar {
 	font-style: none;
-	margin-right: 5px;
+	margin-right: 20px;
 	float: right;
-	padding-left: 10px;
-	margin-top: 10px;
+	padding-left: 20px;
+	margin-top: -30px;
 }
 
 td {
@@ -44,14 +48,16 @@ td {
 
 	#tfnewsearch{
 		float:left;
-		padding:10px;
+		padding:0px;
 		display: inline-block;
 	}
 	.tftextinput2{
 		padding: 5px;
 		font-size:16px;
 		color:#D3D3D3;
+		width: 500px;
 		border:1px solid #D3D3D3;
+		border-radius: 3px;
 	}
 	.tfbutton2 {
 		margin-top: 5px;
@@ -64,7 +70,7 @@ td {
 		color: #D3D3D3;
 		border: solid 1px #D3D3D3;
 		background: #0095cd;
-		border-radius: 5px;
+		border-radius: 3px;
 	}
 	.tfbutton2:hover {
 		text-decoration: none;
@@ -89,7 +95,31 @@ td {
 .tfbutton {
 	height: 30px;
 	border:1px solid #D3D3D3;
+	margin-bottom: -10px;
 }
-table.numbering {
-	border: 1px solid #D3D3D3;
+.tfclear {
+	margin-bottom: 10px;
+}
+
+.pages {
+  display: inline-block; /* Tricky, this could start wrapping!  */
+  font-size: 0;
+  margin-bottom: 30px;
+  border: 1px solid #DDDDDD;
+  border-radius: 3px;
+}
+
+.pages-button {
+  font-size: 16px;
+  display: inline-block;
+  padding: 8px 15px;
+  border-radius: 3px;
+}
+
+.pages-display {
+  font-size: 16px;
+  padding: 0 30px;
+  padding: 8px 25px;
+  border-left: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
 }
