--- a/main.css
+++ b/main.css
@@ -2,39 +2,27 @@
 	box-sizing: border-box;
 }
 
-main {
-	padding: 70px;
-	display: inline-block;
-}
-
 header {
 	background-color: #e5e5e5;
-	position: fixed;
 	height: 40px;
 	width: 100%;
 	border-bottom: 1px solid #cbcbcb;
 
 }
 
-
-a.title {
-	margin-top: 10px;
-	}
-
-
 a:link {
 	text-decoration: none;
 	color: #6600cc;
-
-
 }
 
 .navbar {
-	font-style: none;
 	margin-right: 5px;
 	float: right;
-	padding-left: 10px;
 	margin-top: 10px;
+}
+
+.navbar > a {
+	margin-right: 15px;
 }
 
 td {
@@ -42,54 +30,44 @@ td {
 	padding-top: 15px;
 }
 
-	#tfnewsearch{
-		float:left;
-		padding:10px;
-		display: inline-block;
-	}
-	.tftextinput2{
-		padding: 5px;
-		font-size:16px;
-		color:#D3D3D3;
-		border:1px solid #D3D3D3;
-	}
-	.tfbutton2 {
-		margin-top: 5px;
-		padding: 5px;
-		font-size:16px;
-		outline: none;
-		cursor: pointer;
-		text-align: left;
-		text-decoration: none;
-		color: #D3D3D3;
-		border: solid 1px #D3D3D3;
-		background: #0095cd;
-		border-radius: 5px;
-	}
-	.tfbutton2:hover {
-		text-decoration: none;
-		background: #007ead;
-	}
+#tfnewsearch {
+	margin-top: 20px;
+}
+
+.tftextinput2 {
+	height: 30px;
+	padding: 5px;
+	font-size:16px;
+	color:#D3D3D3;
+	border:1px solid #D3D3D3;
+}
+
+.tfbutton2 {
+	height: 30px;
+	text-decoration: none;
+	border: solid 1px #D3D3D3;
+	background: #0095cd;
+	vertical-align: middle;
+}
 
 	/* Fixes submit button height problem in Firefox */
-	.tfbutton2::-moz-focus-inner {
-	  border: 0;
-	}
-	.tfclear{
-		clear:both;
-	}
+.tfbutton2::-moz-focus-inner {
+  border: 0;
+}
+
+.tfclear {
+	clear:both;
+}
 
 .jobs {
 	color: #D3D3D3;
-}	
+}
+
 .linked {
 	color: blue;
 	font-weight: bold;
 }
-.tfbutton {
-	height: 30px;
-	border:1px solid #D3D3D3;
-}
+
 table.numbering {
 	border: 1px solid #D3D3D3;
 }
